design/parser/parser.output
Terminals unused in grammar

    UNTIL
    LEFT_SQ_BRACKET
    RIGHT_SQ_BRACKET
    QUESTION_MARK
    DOT
    BIT_NOT_OP


Rules useless in parser due to conflicts

  127 func_call: IDENT ASSIGN_OP IDENT LEFT_PAREN arguments RIGHT_PAREN


State 6 conflicts: 19 shift/reduce, 7 reduce/reduce
State 7 conflicts: 1 shift/reduce
State 21 conflicts: 4 reduce/reduce
State 39 conflicts: 28 reduce/reduce
State 40 conflicts: 1 shift/reduce, 7 reduce/reduce
State 47 conflicts: 2 shift/reduce, 4 reduce/reduce
State 65 conflicts: 19 shift/reduce, 7 reduce/reduce
State 67 conflicts: 1 reduce/reduce
State 84 conflicts: 21 shift/reduce, 7 reduce/reduce
State 129 conflicts: 4 reduce/reduce
State 147 conflicts: 2 shift/reduce
State 148 conflicts: 2 shift/reduce
State 149 conflicts: 2 shift/reduce
State 150 conflicts: 2 shift/reduce
State 164 conflicts: 19 shift/reduce, 7 reduce/reduce
State 179 conflicts: 19 shift/reduce, 7 reduce/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 19 shift/reduce, 7 reduce/reduce
State 189 conflicts: 4 reduce/reduce
State 192 conflicts: 2 shift/reduce
State 202 conflicts: 19 shift/reduce, 7 reduce/reduce
State 216 conflicts: 19 shift/reduce, 7 reduce/reduce
State 217 conflicts: 19 shift/reduce, 7 reduce/reduce
State 218 conflicts: 19 shift/reduce, 7 reduce/reduce
State 224 conflicts: 19 shift/reduce, 7 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program function
    2        | functions
    3        | declarations statements

    4 type: INTEGER
    5     | FLOAT
    6     | DOUBLE
    7     | VOID
    8     | BOOLEAN
    9     | CHAR
   10     | STRING

   11 beforedecl: CONST
   12           | %empty

   13 declaration: beforedecl type IDENT SEMICOLON
   14            | beforedecl type IDENT ASSIGN_OP expression SEMICOLON

   15 declarations: declaration
   16             | declarations declaration

   17 tail: statements
   18     | LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

   19 tail_inloop: statements_inloop
   20            | LEFT_CURLY_BRACKET statements_inloop RIGHT_CURLY_BRACKET

   21 bool_expression: relExp
   22                | TRUE_TOKEN
   23                | FALSE_TOKEN

   24 assign: IDENT ASSIGN_OP expression

   25 expression: assign
   26           | IDENT INC_OP
   27           | IDENT DEC_OP
   28           | simpleExp
   29           | IDENT
   30           | bool_expression
   31           | func_call

   32 simpleExp: simpleExp OR_OP andExp
   33          | andExp

   34 andExp: andExp AND_OP
   35       | bitRelExp

   36 bitRelExp: bitRelExp BIT_OR_OP relExp
   37          | bitRelExp AND relExp
   38          | bitRelExp BIT_XOR_OP relExp
   39          | relExp

   40 op: EQ_OP
   41   | NE_OP
   42   | GT_OP
   43   | LT_OP
   44   | LE_OP
   45   | GE_OP
   46   | OR_OP
   47   | AND_OP

   48 relExp: relExp op bitshiftExp
   49       | bitshiftExp

   50 bitshiftExp: bitshiftExp BIT_LSHIFT_OP sumExp
   51            | bitshiftExp BIT_RSHIFT_OP sumExp
   52            | sumExp

   53 pls_min: ADD_OP
   54        | SUB_OP

   55 mul_div: MUL_OP
   56        | DIV_OP
   57        | MOD_OP

   58 sumExp: sumExp pls_min mulExp
   59       | mulExp

   60 mulExp: mulExp mul_div unaryExp
   61       | unaryExp

   62 unaryExp: INC_OP IDENT
   63         | DEC_OP IDENT
   64         | NOT_OP IDENT
   65         | IDENT
   66         | value
   67         | LEFT_PAREN expression RIGHT_PAREN

   68 value: CONST_INT
   69      | CONST_FLOAT
   70      | CONST_CHAR
   71      | STRING_LITERAL

   72 else_if: ELIF LEFT_PAREN bool_expression RIGHT_PAREN tail
   73        | else_if ELIF LEFT_PAREN bool_expression RIGHT_PAREN tail
   74        | %empty

   75 else_part: ELSE tail
   76          | %empty

   77 if_statement: IF LEFT_PAREN bool_expression RIGHT_PAREN tail else_if else_part

   78 while_statement: WHILE LEFT_PAREN bool_expression RIGHT_PAREN tail_inloop

   79 for_statement: FOR LEFT_PAREN assign SEMICOLON bool_expression SEMICOLON expression RIGHT_PAREN tail_inloop

   80 do_statement: DO tail_inloop WHILE LEFT_PAREN bool_expression RIGHT_PAREN SEMICOLON

   81 switch_statement: SWITCH LEFT_PAREN expression RIGHT_PAREN LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET

   82 cases: case
   83      | cases case
   84      | cases default

   85 default: DEFAULT COLON statements BREAK SEMICOLON

   86 case: CASE expression COLON statements BREAK SEMICOLON

   87 return_val: expression
   88           | %empty

   89 return_statement: RETURN return_val SEMICOLON

   90 break_statement: BREAK SEMICOLON

   91 continue_statement: CONTINUE SEMICOLON

   92 expression_statement: expression SEMICOLON

   93 statements: %empty
   94           | statement
   95           | statements statement

   96 statement: if_statement
   97          | while_statement
   98          | for_statement
   99          | do_statement
  100          | switch_statement
  101          | return_statement
  102          | expression_statement
  103          | declarations
  104          | enum_statement

  105 statement_inloop: statement
  106                 | break_statement
  107                 | continue_statement

  108 statements_inloop: statement_inloop
  109                  | statements_inloop statement_inloop

  110 functions: functions function
  111          | function

  112 function: function_head function_tail

  113 param_empty: parameters
  114            | %empty

  115 function_head: FUNC IDENT LEFT_PAREN param_empty RIGHT_PAREN type

  116 function_tail: LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

  117 parameters: parameter
  118           | parameters COMMA parameter
  119           | %empty

  120 parameter: type IDENT

  121 enum_statement: ENUM IDENT LEFT_CURLY_BRACKET enum_list RIGHT_CURLY_BRACKET

  122 enum_list: one_val
  123          | enum_list COMMA one_val

  124 one_val: IDENT
  125        | IDENT ASSIGN_OP value

  126 func_call: IDENT LEFT_PAREN arguments RIGHT_PAREN
  127          | IDENT ASSIGN_OP IDENT LEFT_PAREN arguments RIGHT_PAREN

  128 arguments: argument
  129          | arguments COMMA argument
  130          | %empty

  131 argument: expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <int_val> (258) 4
    FLOAT <int_val> (259) 5
    DOUBLE <int_val> (260) 6
    VOID <int_val> (261) 7
    BOOLEAN <int_val> (262) 8
    CHAR <int_val> (263) 9
    CONST <int_val> (264) 11
    STRING <int_val> (265) 10
    IDENT <symbol_table_item> (266) 13 14 24 26 27 29 62 63 64 65 115 120 121 124 125 126 127
    CONST_INT <int_val> (267) 68
    CONST_FLOAT <double_val> (268) 69
    CONST_CHAR <char_val> (269) 70
    STRING_LITERAL <str_val> (270) 71
    IF <int_val> (271) 77
    ELSE <int_val> (272) 75
    ELIF <int_val> (273) 72 73
    WHILE <int_val> (274) 78 80
    FOR <int_val> (275) 79
    DO <int_val> (276) 80
    SWITCH <int_val> (277) 81
    CASE <int_val> (278) 86
    DEFAULT <int_val> (279) 85
    RETURN <int_val> (280) 89
    BREAK <int_val> (281) 85 86 90
    CONTINUE <int_val> (282) 91
    TRUE_TOKEN <int_val> (283) 22
    FALSE_TOKEN <int_val> (284) 23
    ENUM <int_val> (285) 121
    FUNC <int_val> (286) 115
    UNTIL <int_val> (287)
    LEFT_PAREN <int_val> (288) 67 72 73 77 78 79 80 81 115 126 127
    RIGHT_PAREN <int_val> (289) 67 72 73 77 78 79 80 81 115 126 127
    LEFT_CURLY_BRACKET <int_val> (290) 18 20 81 116 121
    RIGHT_CURLY_BRACKET <int_val> (291) 18 20 81 116 121
    LEFT_SQ_BRACKET <int_val> (292)
    RIGHT_SQ_BRACKET <int_val> (293)
    SEMICOLON <int_val> (294) 13 14 79 80 85 86 89 90 91 92
    COMMA <int_val> (295) 118 123 129
    COLON <int_val> (296) 85 86
    QUESTION_MARK <int_val> (297)
    DOT <int_val> (298)
    ADD_OP <int_val> (299) 53
    SUB_OP <int_val> (300) 54
    MUL_OP <int_val> (301) 55
    DIV_OP <int_val> (302) 56
    MOD_OP <int_val> (303) 57
    INC_OP <int_val> (304) 26 62
    DEC_OP <int_val> (305) 27 63
    OR_OP <int_val> (306) 32 46
    AND_OP <int_val> (307) 34 47
    NOT_OP <int_val> (308) 64
    BIT_OR_OP <int_val> (309) 36
    AND <int_val> (310) 37
    BIT_XOR_OP <int_val> (311) 38
    BIT_NOT_OP <int_val> (312)
    BIT_LSHIFT_OP <int_val> (313) 50
    BIT_RSHIFT_OP <int_val> (314) 51
    EQ_OP <int_val> (315) 40
    NE_OP <int_val> (316) 41
    GT_OP <int_val> (317) 42
    LT_OP <int_val> (318) 43
    GE_OP <int_val> (319) 45
    LE_OP <int_val> (320) 44
    ASSIGN_OP <int_val> (321) 14 24 125 127


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    program (68)
        on left: 1 2 3
        on right: 0 1
    type (69)
        on left: 4 5 6 7 8 9 10
        on right: 13 14 115 120
    beforedecl (70)
        on left: 11 12
        on right: 13 14
    declaration (71)
        on left: 13 14
        on right: 15 16
    declarations (72)
        on left: 15 16
        on right: 3 16 103
    tail (73)
        on left: 17 18
        on right: 72 73 75 77
    tail_inloop (74)
        on left: 19 20
        on right: 78 79 80
    bool_expression (75)
        on left: 21 22 23
        on right: 30 72 73 77 78 79 80
    assign (76)
        on left: 24
        on right: 25 79
    expression (77)
        on left: 25 26 27 28 29 30 31
        on right: 14 24 67 79 81 86 87 92 131
    simpleExp (78)
        on left: 32 33
        on right: 28 32
    andExp (79)
        on left: 34 35
        on right: 32 33 34
    bitRelExp (80)
        on left: 36 37 38 39
        on right: 35 36 37 38
    op (81)
        on left: 40 41 42 43 44 45 46 47
        on right: 48
    relExp (82)
        on left: 48 49
        on right: 21 36 37 38 39 48
    bitshiftExp (83)
        on left: 50 51 52
        on right: 48 49 50 51
    pls_min (84)
        on left: 53 54
        on right: 58
    mul_div (85)
        on left: 55 56 57
        on right: 60
    sumExp (86)
        on left: 58 59
        on right: 50 51 52 58
    mulExp (87)
        on left: 60 61
        on right: 58 59 60
    unaryExp (88)
        on left: 62 63 64 65 66 67
        on right: 60 61
    value (89)
        on left: 68 69 70 71
        on right: 66 125
    else_if (90)
        on left: 72 73 74
        on right: 73 77
    else_part (91)
        on left: 75 76
        on right: 77
    if_statement (92)
        on left: 77
        on right: 96
    while_statement (93)
        on left: 78
        on right: 97
    for_statement (94)
        on left: 79
        on right: 98
    do_statement (95)
        on left: 80
        on right: 99
    switch_statement (96)
        on left: 81
        on right: 100
    cases (97)
        on left: 82 83 84
        on right: 81 83 84
    default (98)
        on left: 85
        on right: 84
    case (99)
        on left: 86
        on right: 82 83
    return_val (100)
        on left: 87 88
        on right: 89
    return_statement (101)
        on left: 89
        on right: 101
    break_statement (102)
        on left: 90
        on right: 106
    continue_statement (103)
        on left: 91
        on right: 107
    expression_statement (104)
        on left: 92
        on right: 102
    statements (105)
        on left: 93 94 95
        on right: 3 17 18 85 86 95 116
    statement (106)
        on left: 96 97 98 99 100 101 102 103 104
        on right: 94 95 105
    statement_inloop (107)
        on left: 105 106 107
        on right: 108 109
    statements_inloop (108)
        on left: 108 109
        on right: 19 20 109
    functions (109)
        on left: 110 111
        on right: 2 110
    function (110)
        on left: 112
        on right: 1 110 111
    param_empty (111)
        on left: 113 114
        on right: 115
    function_head (112)
        on left: 115
        on right: 112
    function_tail (113)
        on left: 116
        on right: 112
    parameters (114)
        on left: 117 118 119
        on right: 113 118
    parameter (115)
        on left: 120
        on right: 117 118
    enum_statement (116)
        on left: 121
        on right: 104
    enum_list (117)
        on left: 122 123
        on right: 121 123
    one_val (118)
        on left: 124 125
        on right: 122 123
    func_call (119)
        on left: 126 127
        on right: 31
    arguments (120)
        on left: 128 129 130
        on right: 126 127 129
    argument (121)
        on left: 131
        on right: 128 129


State 0

    0 $accept: . program $end
    1 program: . program function
    2        | . functions
    3        | . declarations statements
   11 beforedecl: . CONST
   12           | . %empty  [INTEGER, FLOAT, DOUBLE, VOID, BOOLEAN, CHAR, STRING]
   13 declaration: . beforedecl type IDENT SEMICOLON
   14            | . beforedecl type IDENT ASSIGN_OP expression SEMICOLON
   15 declarations: . declaration
   16             | . declarations declaration
  110 functions: . functions function
  111          | . function
  112 function: . function_head function_tail
  115 function_head: . FUNC IDENT LEFT_PAREN param_empty RIGHT_PAREN type

    CONST  shift, and go to state 1
    FUNC   shift, and go to state 2

    $default  reduce using rule 12 (beforedecl)

    program        go to state 3
    beforedecl     go to state 4
    declaration    go to state 5
    declarations   go to state 6
    functions      go to state 7
    function       go to state 8
    function_head  go to state 9


State 1

   11 beforedecl: CONST .

    $default  reduce using rule 11 (beforedecl)


State 2

  115 function_head: FUNC . IDENT LEFT_PAREN param_empty RIGHT_PAREN type

    IDENT  shift, and go to state 10


State 3

    0 $accept: program . $end
    1 program: program . function
  112 function: . function_head function_tail
  115 function_head: . FUNC IDENT LEFT_PAREN param_empty RIGHT_PAREN type

    $end  shift, and go to state 11
    FUNC  shift, and go to state 2

    function       go to state 12
    function_head  go to state 9


State 4

    4 type: . INTEGER
    5     | . FLOAT
    6     | . DOUBLE
    7     | . VOID
    8     | . BOOLEAN
    9     | . CHAR
   10     | . STRING
   13 declaration: beforedecl . type IDENT SEMICOLON
   14            | beforedecl . type IDENT ASSIGN_OP expression SEMICOLON

    INTEGER  shift, and go to state 13
    FLOAT    shift, and go to state 14
    DOUBLE   shift, and go to state 15
    VOID     shift, and go to state 16
    BOOLEAN  shift, and go to state 17
    CHAR     shift, and go to state 18
    STRING   shift, and go to state 19

    type  go to state 20


State 5

   15 declarations: declaration .

    $default  reduce using rule 15 (declarations)


State 6

    3 program: declarations . statements
   11 beforedecl: . CONST
   12           | . %empty  [INTEGER, FLOAT, DOUBLE, VOID, BOOLEAN, CHAR, STRING]
   13 declaration: . beforedecl type IDENT SEMICOLON
   14            | . beforedecl type IDENT ASSIGN_OP expression SEMICOLON
   15 declarations: . declaration
   16             | . declarations declaration
   16             | declarations . declaration
   21 bool_expression: . relExp
   22                | . TRUE_TOKEN
   23                | . FALSE_TOKEN
   24 assign: . IDENT ASSIGN_OP expression
   25 expression: . assign
   26           | . IDENT INC_OP
   27           | . IDENT DEC_OP
   28           | . simpleExp
   29           | . IDENT
   30           | . bool_expression
   31           | . func_call
   32 simpleExp: . simpleExp OR_OP andExp
   33          | . andExp
   34 andExp: . andExp AND_OP
   35       | . bitRelExp
   36 bitRelExp: . bitRelExp BIT_OR_OP relExp
   37          | . bitRelExp AND relExp
   38          | . bitRelExp BIT_XOR_OP relExp
   39          | . relExp
   48 relExp: . relExp op bitshiftExp
   49       | . bitshiftExp
   50 bitshiftExp: . bitshiftExp BIT_LSHIFT_OP sumExp
   51            | . bitshiftExp BIT_RSHIFT_OP sumExp
   52            | . sumExp
   58 sumExp: . sumExp pls_min mulExp
   59       | . mulExp
   60 mulExp: . mulExp mul_div unaryExp
   61       | . unaryExp
   62 unaryExp: . INC_OP IDENT
   63         | . DEC_OP IDENT
   64         | . NOT_OP IDENT
   65         | . IDENT
   66         | . value
   67         | . LEFT_PAREN expression RIGHT_PAREN
   68 value: . CONST_INT
   69      | . CONST_FLOAT
   70      | . CONST_CHAR
   71      | . STRING_LITERAL
   77 if_statement: . IF LEFT_PAREN bool_expression RIGHT_PAREN tail else_if else_part
   78 while_statement: . WHILE LEFT_PAREN bool_expression RIGHT_PAREN tail_inloop
   79 for_statement: . FOR LEFT_PAREN assign SEMICOLON bool_expression SEMICOLON expression RIGHT_PAREN tail_inloop
   80 do_statement: . DO tail_inloop WHILE LEFT_PAREN bool_expression RIGHT_PAREN SEMICOLON
   81 switch_statement: . SWITCH LEFT_PAREN expression RIGHT_PAREN LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
   89 return_statement: . RETURN return_val SEMICOLON
   92 expression_statement: . expression SEMICOLON
   93 statements: . %empty  [$end, INTEGER, FLOAT, DOUBLE, VOID, BOOLEAN, CHAR, CONST, STRING, IDENT, CONST_INT, CONST_FLOAT, CONST_CHAR, STRING_LITERAL, IF, WHILE, FOR, DO, SWITCH, RETURN, TRUE_TOKEN, FALSE_TOKEN, ENUM, FUNC, LEFT_PAREN, INC_OP, DEC_OP, NOT_OP]
   94           | . statement
   95           | . statements statement
   96 statement: . if_statement
   97          | . while_statement
   98          | . for_statement
   99          | . do_statement
  100          | . switch_statement
  101          | . return_statement
  102          | . expression_statement
  103          | . declarations
  104          | . enum_statement
  121 enum_statement: . ENUM IDENT LEFT_CURLY_BRACKET enum_list RIGHT_CURLY_BRACKET
  126 func_call: . IDENT LEFT_PAREN arguments RIGHT_PAREN
  127          | . IDENT ASSIGN_OP IDENT LEFT_PAREN arguments RIGHT_PAREN

    CONST           shift, and go to state 1
    IDENT           shift, and go to state 21
    CONST_INT       shift, and go to state 22
    CONST_FLOAT     shift, and go to state 23
    CONST_CHAR      shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    IF              shift, and go to state 26
    WHILE           shift, and go to state 27
    FOR             shift, and go to state 28
    DO              shift, and go to state 29
    SWITCH          shift, and go to state 30
    RETURN          shift, and go to state 31
    TRUE_TOKEN      shift, and go to state 32
    FALSE_TOKEN     shift, and go to state 33
    ENUM            shift, and go to state 34
    LEFT_PAREN      shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    NOT_OP          shift, and go to state 38

    $end            reduce using rule 93 (statements)
    INTEGER         reduce using rule 12 (beforedecl)
    INTEGER         [reduce using rule 93 (statements)]
    FLOAT           reduce using rule 12 (beforedecl)
    FLOAT           [reduce using rule 93 (statements)]
    DOUBLE          reduce using rule 12 (beforedecl)
    DOUBLE          [reduce using rule 93 (statements)]
    VOID            reduce using rule 12 (beforedecl)
    VOID            [reduce using rule 93 (statements)]
    BOOLEAN         reduce using rule 12 (beforedecl)
    BOOLEAN         [reduce using rule 93 (statements)]
    CHAR            reduce using rule 12 (beforedecl)
    CHAR            [reduce using rule 93 (statements)]
    CONST           [reduce using rule 93 (statements)]
    STRING          reduce using rule 12 (beforedecl)
    STRING          [reduce using rule 93 (statements)]
    IDENT           [reduce using rule 93 (statements)]
    CONST_INT       [reduce using rule 93 (statements)]
    CONST_FLOAT     [reduce using rule 93 (statements)]
    CONST_CHAR      [reduce using rule 93 (statements)]
    STRING_LITERAL  [reduce using rule 93 (statements)]
    IF              [reduce using rule 93 (statements)]
    WHILE           [reduce using rule 93 (statements)]
    FOR             [reduce using rule 93 (statements)]
    DO              [reduce using rule 93 (statements)]
    SWITCH          [reduce using rule 93 (statements)]
    RETURN          [reduce using rule 93 (statements)]
    TRUE_TOKEN      [reduce using rule 93 (statements)]
    FALSE_TOKEN     [reduce using rule 93 (statements)]
    ENUM            [reduce using rule 93 (statements)]
    FUNC            reduce using rule 93 (statements)
    LEFT_PAREN      [reduce using rule 93 (statements)]
    INC_OP          [reduce using rule 93 (statements)]
    DEC_OP          [reduce using rule 93 (statements)]
    NOT_OP          [reduce using rule 93 (statements)]
    $default        reduce using rule 12 (beforedecl)

    beforedecl            go to state 4
    declaration           go to state 39
    declarations          go to state 40
    bool_expression       go to state 41
    assign                go to state 42
    expression            go to state 43
    simpleExp             go to state 44
    andExp                go to state 45
    bitRelExp             go to state 46
    relExp                go to state 47
    bitshiftExp           go to state 48
    sumExp                go to state 49
    mulExp                go to state 50
    unaryExp              go to state 51
    value                 go to state 52
    if_statement          go to state 53
    while_statement       go to state 54
    for_statement         go to state 55
    do_statement          go to state 56
    switch_statement      go to state 57
    return_statement      go to state 58
    expression_statement  go to state 59
    statements            go to state 60
    statement             go to state 61
    enum_statement        go to state 62
    func_call             go to state 63


State 7

    2 program: functions .  [$end, FUNC]
  110 functions: functions . function
  112 function: . function_head function_tail
  115 function_head: . FUNC IDENT LEFT_PAREN param_empty RIGHT_PAREN type

    FUNC  shift, and go to state 2

    FUNC      [reduce using rule 2 (program)]
    $default  reduce using rule 2 (program)

    function       go to state 64
    function_head  go to state 9


State 8

  111 functions: function .

    $default  reduce using rule 111 (functions)


State 9

  112 function: function_head . function_tail
  116 function_tail: . LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 65

    function_tail  go to state 66


State 10

  115 function_head: FUNC IDENT . LEFT_PAREN param_empty RIGHT_PAREN type

    LEFT_PAREN  shift, and go to state 67


State 11

    0 $accept: program $end .

    $default  accept


State 12

    1 program: program function .

    $default  reduce using rule 1 (program)


State 13

    4 type: INTEGER .

    $default  reduce using rule 4 (type)


State 14

    5 type: FLOAT .

    $default  reduce using rule 5 (type)


State 15

    6 type: DOUBLE .

    $default  reduce using rule 6 (type)


State 16

    7 type: VOID .

    $default  reduce using rule 7 (type)


State 17

    8 type: BOOLEAN .

    $default  reduce using rule 8 (type)


State 18

    9 type: CHAR .

    $default  reduce using rule 9 (type)


State 19

   10 type: STRING .

    $default  reduce using rule 10 (type)


State 20

   13 declaration: beforedecl type . IDENT SEMICOLON
   14            | beforedecl type . IDENT ASSIGN_OP expression SEMICOLON

    IDENT  shift, and go to state 68


State 21

   24 assign: IDENT . ASSIGN_OP expression
   26 expression: IDENT . INC_OP
   27           | IDENT . DEC_OP
   29           | IDENT .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON]
   65 unaryExp: IDENT .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, ADD_OP, SUB_OP, MUL_OP, DIV_OP, MOD_OP, OR_OP, AND_OP, BIT_OR_OP, AND, BIT_XOR_OP, BIT_LSHIFT_OP, BIT_RSHIFT_OP, EQ_OP, NE_OP, GT_OP, LT_OP, GE_OP, LE_OP]
  126 func_call: IDENT . LEFT_PAREN arguments RIGHT_PAREN
  127          | IDENT . ASSIGN_OP IDENT LEFT_PAREN arguments RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 69
    INC_OP      shift, and go to state 70
    DEC_OP      shift, and go to state 71
    ASSIGN_OP   shift, and go to state 72

    RIGHT_PAREN  reduce using rule 29 (expression)
    RIGHT_PAREN  [reduce using rule 65 (unaryExp)]
    SEMICOLON    reduce using rule 29 (expression)
    SEMICOLON    [reduce using rule 65 (unaryExp)]
    COMMA        reduce using rule 29 (expression)
    COMMA        [reduce using rule 65 (unaryExp)]
    COLON        reduce using rule 29 (expression)
    COLON        [reduce using rule 65 (unaryExp)]
    $default     reduce using rule 65 (unaryExp)


State 22

   68 value: CONST_INT .

    $default  reduce using rule 68 (value)


State 23

   69 value: CONST_FLOAT .

    $default  reduce using rule 69 (value)


State 24

   70 value: CONST_CHAR .

    $default  reduce using rule 70 (value)


State 25

   71 value: STRING_LITERAL .

    $default  reduce using rule 71 (value)


State 26

   77 if_statement: IF . LEFT_PAREN bool_expression RIGHT_PAREN tail else_if else_part

    LEFT_PAREN  shift, and go to state 73


State 27

   78 while_statement: WHILE . LEFT_PAREN bool_expression RIGHT_PAREN tail_inloop

    LEFT_PAREN  shift, and go to state 74


State 28

   79 for_statement: FOR . LEFT_PAREN assign SEMICOLON bool_expression SEMICOLON expression RIGHT_PAREN tail_inloop

    LEFT_PAREN  shift, and go to state 75


State 29
